test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call/stdout.snap
---
source: test/src/snapshot/mod.rs
---
> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
error
   --> test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call/src/main.sw:356:53
    |
354 | #[test]
355 | fn cost_of_in_array_1() {
356 |     let _ = abi(MyContract, CONTRACT_ID).in_array_1([0]);
    |                                                     ^^^ Internal compiler error: `InstOp::InitAggr` was not lowered in the IR.
Please file an issue on the repository and include the code that triggered this error.
357 | }
358 | /* END ARRAY1 */
    |
____

  Aborting due to 1 error.
error: Failed to compile const_of_contract_call

> Block: ARRAY0
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [632 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_array_0 ... ok (???, 10183 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: ARRAY1
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
error
   --> test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call/src/main.sw:179:53
    |
177 | #[test]
178 | fn isolated_cost_of_in_array_1() {
179 |     let _ = abi(MyContract, CONTRACT_ID).in_array_1([0]);
    |                                                     ^^^ Internal compiler error: `InstOp::InitAggr` was not lowered in the IR.
Please file an issue on the repository and include the code that triggered this error.
180 | }
181 | /* END ARRAY1 */
    |
____

  Aborting due to 1 error.
error: Failed to compile const_of_contract_call

> Block: ARRAY16
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [728 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_array_16 ... ok (???, 10296 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: ARRAY32
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [728 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_array_32 ... ok (???, 10342 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: ARRAY64
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [728 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_array_64 ... ok (???, 10430 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: ARRAY8
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [792 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_array_8 ... ok (???, 10780 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: B256
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [712 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_b256 ... ok (???, 10262 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: BOOL
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [1.048 KB] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_bool ... ok (???, 10446 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: ENUM_U64
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [880 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test in_enum_u64 ... ok (???, 10373 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: ENUM_U64_U64
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [928 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test in_enum_u64_u64 ... ok (???, 10385 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: ENUM_U64_U64_U64
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [992 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test in_enum_u64_u64_u64 ... ok (???, 10393 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: STR0
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [1.152 KB] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_str_0 ... ok (???, 10644 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: STR1
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [1.376 KB] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_str_1 ... ok (???, 10836 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: STR16
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [1.424 KB] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_str_16 ... ok (???, 10855 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: STR32
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [1.44 KB] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_str_32 ... ok (???, 10860 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: STR8
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [1.392 KB] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_str_8 ... ok (???, 10851 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: STRUCT_U64
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
error
   --> test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call/src/main.sw:199:56
    |
197 | #[test]
198 | fn in_struct_u64() {
199 |     let _ = abi(MyContract, CONTRACT_ID).in_struct_u64(S1 { a: 0 });
    |                                                        ^^^^^^^^^^^ Internal compiler error: `InstOp::InitAggr` was not lowered in the IR.
Please file an issue on the repository and include the code that triggered this error.
200 | }
201 | /* END STRUCT_U64 */
    |
____

  Aborting due to 1 error.
error: Failed to compile const_of_contract_call

> Block: STRUCT_U64_U64
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [840 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test in_struct_u64_u64 ... ok (???, 10271 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: STRUCT_U64_U64_U64
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [864 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test in_struct_u64_u64_u64 ... ok (???, 10275 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: TUPLE0
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [632 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_tuple_0 ... ok (???, 10180 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: TUPLE1
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 1
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
error
   --> test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call/src/main.sw:191:53
    |
189 | #[test]
190 | fn isolated_cost_of_in_tuple_1() {
191 |     let _ = abi(MyContract, CONTRACT_ID).in_tuple_1((0,));
    |                                                     ^^^^ Internal compiler error: `InstOp::InitAggr` was not lowered in the IR.
Please file an issue on the repository and include the code that triggered this error.
192 | }
193 | /* END TUPLE1 */
    |
____

  Aborting due to 1 error.
error: Failed to compile const_of_contract_call

> Block: TUPLE2
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [824 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_tuple_2 ... ok (???, 10270 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: TUPLE3
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [848 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_tuple_3 ... ok (???, 10274 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: TUPLE4
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [880 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_tuple_4 ... ok (???, 10276 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: U16
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [1.24 KB] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_u16 ... ok (???, 10743 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: U256
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [712 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_u256 ... ok (???, 10262 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: U32
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [1.344 KB] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_u32 ... ok (???, 10960 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: U64
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [688 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_u64 ... ok (???, 10232 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???

> Block: U8
> replace-file src/main.sw "fn cost_of_in" "fn isolated_cost_of_in"

> forc test --path test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call --release --experimental const_generics
exit status: 0
output:
    Building test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call
   Compiling library std (test/src/e2e_vm_tests/reduced_std_libs/sway-lib-std-core)
   Compiling contract const_of_contract_call (test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/const_of_contract_call)
    Finished release [optimized + fuel] target(s) [992 B] in ???
     Running 1 test, filtered 0 tests

tested -- const_of_contract_call

      test isolated_cost_of_in_u8 ... ok (???, 10388 gas)

test result: OK. 1 passed; 0 failed; finished in ???

    Finished in ???
